# XiaoIMU

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_classic.cpp  time.cpp  time.hpp  xiao_imu.cpp  xiao_imu.hpp  xiao_imu_classic.cpp  xiao_imu_classic.hpp  xiao_imu_conflict_20240529_115953_CwIaRnoi3X.cpp
IMU_arduinoSketch/: IMU_arduinoSketch.ino
example/: CMakeLists.txt  main.cpp
readIMU_cppCode/: xiao_imu.cpp  xiao_imu.hpp
test_axes/: test_axes.ino
